[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-template"
dynamic = ["version"]
authors = [
  { name="Roboflow", email="develop@roboflow.com" },
]
description = "Roboflow Python Sandbox Template"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://roboflow.com"

[dependency-groups]
dev = [
    "pre-commit",
    "twine",
    "pytest",
    "wheel",
]

[tool.setuptools.dynamic]
version = {attr = "sandbox.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
#ignore = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["sandbox"]
