[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sandbox-template"
dynamic = ["version"]
authors = [
  { name="Roboflow", email="develop@roboflow.com" },
]
description = "Roboflow Python Sandbox Template"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://roboflow.com"

[dependency-groups]
dev = [
    "pre-commit",
    "twine",
    "pytest",
    "wheel",
]

[tool.setuptools.dynamic]
version = {attr = "sandbox.__version__"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors - https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F", # pyflakes - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I", # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "W", # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "B", # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "SIM", # flake8-simplify - https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "N", # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "D", # pydocstyle - https://docs.astral.sh/ruff/rules/#pydocstyle-d
]

[tool.ruff.lint.isort]
known-first-party = ["sandbox"]
