[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61" ]

[project]
name = "sandbox-template"
description = "Roboflow Python Sandbox Template"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Roboflow", email = "develop@roboflow.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [  ]

urls."Homepage" = "https://roboflow.com"

[dependency-groups]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "twine",
  "wheel",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "sandbox.__version__" }

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.ruff]
target-version = "py39"

line-length = 120
format.indent-style = "space"
format.quote-style = "double"
lint.select = [
  "B",   # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
  "D",   # pydocstyle - https://docs.astral.sh/ruff/rules/#pydocstyle-d
  "E",   # pycodestyle errors - https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
  "F",   # pyflakes - https://docs.astral.sh/ruff/rules/#pyflakes-f
  "I",   # isort - https://docs.astral.sh/ruff/rules/#isort-i
  "N",   # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
  "SIM", # flake8-simplify - https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
  "UP",  # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "W",   # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
]
lint.isort.known-first-party = [ "sandbox" ]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--doctest-modules",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
